--- a/dev/site/styles/main.css
+++ b/dev/site/styles/main.css
@@ -1,14 +1,3 @@
-@font-face {
-    font-family: 'MinercraftoryRegular';
-    src: url('minercraftory-webfont.eot');
-    src: url('minercraftory-webfont.eot?#iefix') format('embedded-opentype'),
-         url('minercraftory-webfont.woff') format('woff'),
-         url('minercraftory-webfont.ttf') format('truetype'),
-         url('minercraftory-webfont.svg#minercraftoryregular') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
-
 a, a:visited {
 	color: #111111;
 	text-decoration: none;
@@ -35,30 +24,13 @@ body {
 	z-index: 0;
 }
 
-	#top .big {
+	#logo {
 		position: absolute;
+		left: 0px;
 		top: 50%;
 		width: 100%;
 
-		margin-top: -170px;
-
-		color: #FFDC00;
-		font-family: "MinercraftoryRegular";
-		font-size: 85px;
-		text-align: center;
-	}
-
-	#top .small {
-		position: absolute;
-		top: 50%;
-		width: 100%;
-
-		margin-top: -25px;
-
-		color: #FFFFFF;
-		font-family: "MinercraftoryRegular";
-		font-size: 20px;
-		text-align: center;
+		margin-top: -160px;
 	}
 
 #icon {
@@ -83,13 +55,7 @@ body {
 	top: 100%;
 	width: 100%;
 
-	margin-top: 372px;
-
-	color: #FFFFFF;
-	font-family: "MinercraftoryRegular";
-	font-size: 30px;
-	line-height: 75px;
-	text-align: center;
+	margin-top: 390px;
 }
 
 #content {
