Made the zombies get mad and added iAds.

--- a/dev/site/styles/main.css
+++ b/dev/site/styles/main.css
@@ -1,5 +1,5 @@
 a, a:visited {
-	color: #111111;
+	color: #FFFFFF;
 	text-decoration: none;
 }
 
@@ -59,7 +59,7 @@ body {
 	margin-left: -250px;
 	margin-top: 400px;
 
-	color: #111111;
+	color: #FFFFFF;
 	font-family: Helvetica;
 	font-size: 13px;
 	letter-spacing: 2px;
